--- a/project/src/components/stopwatch/stopwatch.css
+++ b/project/src/components/stopwatch/stopwatch.css
@@ -1,3 +1,10 @@
-.stopwatch {
-  color: black;
+.time-elapsed {
+  margin-left: 20px;
+  font-size: 16px;
+  color: #555;
+}
+
+.actions {
+  display: flex;
+  gap: 10px;
 }
