--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,18 +1,13 @@
 #root {
-  /* max-width: 1280px; */
-  /* margin: 0 auto;
-  padding: 2rem;
-  text-align: center; */
+  --top-bar-margin: 0.5rem;
+  --top-bar-heigth: 50px;
 }
 
-/* Reset margins and paddings */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-/* Ensure the page takes full viewport height and is non-scrollable */
 
 .app-container {
   height: 100vh;
@@ -22,18 +17,20 @@
 
 /* Left Sidebar */
 .left-sidebar {
-  border-radius: 0 20px 20px 0
+  border-radius: 0 20px 20px 0;
   flex: 0 0 250px; /* Fixed width */
-  min-width: 300px;
+  min-width: 250px;
   background-color: #fafafa;
-  border-right: 1px solid #e0e0e0;
   display: flex;
   flex-direction: column;
+  margin-right: 0.5rem;
+  border: 1px solid #e0e0e0;
+  overflow: hidden;
 }
 
 .sidebar-header {
-  padding: 15px;
-  font-size: 18px;
+  padding: 0.7rem;
+  font-size: 1rem;
   background-color: #f5f5f5;
   border-bottom: 1px solid #e0e0e0;
 }
@@ -51,11 +48,21 @@
 }
 
 .top-bar {
-  flex: 0 0 60px; 
+  height: var(--top-bar-heigth);
   background-color: #f5f5f5;
   display: flex;
   align-items: center;
   padding: 0 20px;
+  justify-content: space-between;
+  margin-bottom: var(--top-bar-margin);
+  border-radius: 0 0 15px 15px;
+  border: 1px solid #e0e0e0;
+}
+
+.canvas-container {
+  flex: 1;
+  display: flex;
+  height: calc(100% - var(--top-bar-heigth) - var(--top-bar-margin)) !important;
 }
 
 .controls {
@@ -67,14 +74,8 @@
   margin-right: 10px;
 }
 
-.time-elapsed {
-  margin-left: 20px;
-  font-size: 16px;
-  color: #555;
-}
-
 .simulation-area {
-  flex: 1; 
+  flex: 1;
   background-color: #ffffff;
   display: flex;
   justify-content: center;
@@ -82,19 +83,21 @@
   overflow: hidden;
 }
 
-
 .right-sidebar {
-  flex: 0 0 300px; 
+  flex: 0 0 250px;
   min-width: 250px;
   background-color: #fafafa;
   border-left: 1px solid #e0e0e0;
   display: flex;
   flex-direction: column;
+  margin-left: 0.5rem;
+  border-radius: 20px 0 0 20px;
+  border: 1px solid #e0e0e0;
+  overflow: hidden;
 }
 
-
 .movement-grid {
-  flex: 0 0 40%; 
+  flex: 0 0 40%;
   min-height: 200px;
   display: flex;
   flex-direction: column;
@@ -105,9 +108,8 @@
   overflow-y: auto;
 }
 
-
 .json-config {
-  flex: 1; 
+  flex: 1;
   min-height: 300px;
   display: flex;
   flex-direction: column;
@@ -128,23 +130,4 @@
 .movement-grid > *,
 .json-config > * {
   overflow-y: auto;
-}
-
-.top-bar {
-  background-color: #f5f5f5;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  padding: 0 20px;
-  justify-content: space-between;
-}
-
-@media (max-width: 1200px) {
-  .left-sidebar {
-    flex: 0 0 200px;
-  }
-
-  .right-sidebar {
-    flex: 0 0 250px;
-  }
 }
