--- a/project/src/components/gridMap/gridMap.css
+++ b/project/src/components/gridMap/gridMap.css
@@ -1,9 +1,10 @@
 .grid-map {
   display: flex;
   flex-direction: column;
-  height: 50%;
-  min-height: 300px;
+  min-height: 250px;
   border-radius: 20px 0 0 20px;
   border: 1px solid #e0e0e0;
   overflow: hidden;
+  justify-content: center;
+  align-items: center;
 }
